@@ -1,4 +1,7 @@
 2012-04-02 Andrea Del Prete <andrea.delprete@iit.it>
+        * iDyn.cpp: storing rototranslation matrix in iDynLink for performance
+                    
+2012-04-02 Andrea Del Prete <andrea.delprete@iit.it>
         * iDyn.cpp: add methods to compute lagrangian dynamics (mass matrix, coriolis
                     and centrifugal torques, gravity torques)
 
